# deepresearch-agent

./: README.md
deepresearch-agent/: .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  run.sh
deepresearch-agent/deepresearch/agents/research/: graph.py  methods.py  summarizer.py
deepresearch-agent/deepresearch/agents/scope/: graph.py
deepresearch-agent/deepresearch/agents/supervisor/: graph.py
deepresearch-agent/deepresearch/agents/writer/: graph.py
deepresearch-agent/deepresearch/config/: env.py  gemini_models.py  llm.py  logging.py
deepresearch-agent/deepresearch/core/: constants.py  model.py  opik_prompts.py  prompts.py  state.py
deepresearch-agent/deepresearch/interface/: main.py  schema.py
deepresearch-agent/deepresearch/notebooks/: agent.ipynb  research.ipynb  scope.ipynb  supervisor.ipynb
deepresearch-agent/deepresearch/prompts/: clarify_with_user_instructions.txt  compress_research_human_message.txt  compress_research_system_prompt.txt  final_report_generation_prompt.txt  lead_researcher_prompt.txt  research_agent_prompt.txt  research_agent_prompt_with_mcp.txt  summarize_webpage_prompt.txt  transform_messages_into_research_topic_prompt.txt
deepresearch-agent/deepresearch/tools/: pplxapi.py  tavilyapi.py  tool.py  utils.py
deepresearch-agent/docs/: README.md  tool-execution-patterns.md
web/deepresearch/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
web/deepresearch/src/: App.vue
web/deepresearch/src/components/: ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ChatWindow.vue
web/deepresearch/src/services/: chatService.js
